--- a/public/rate.html
+++ b/public/rate.html
@@ -15,14 +15,13 @@
   --card:#ffffffee; --txt:#111; --shadow:rgba(0,0,0,.08);
   --radius:18px;
 }
-@keyframes grad {0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
-@keyframes pop  {0%{opacity:0;transform:translateY(32px) scale(.95)}100%{opacity:1;transform:none}}
-@keyframes up   {from{opacity:0;transform:translateY(22px)}to{opacity:1;transform:none}}
-@keyframes pulse{0%,100%{transform:none;box-shadow:0 4px 9px rgba(0,0,0,.12)}50%{transform:translateY(-3px);box-shadow:0 8px 20px rgba(0,0,0,.18)}}
+@keyframes grad  {0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
+@keyframes pop   {0%{opacity:0;transform:translateY(32px) scale(.95)}100%{opacity:1;transform:none}}
+@keyframes up    {from{opacity:0;transform:translateY(22px)}to{opacity:1;transform:none}}
+@keyframes pulse {0%,100%{transform:none;box-shadow:0 4px 9px rgba(0,0,0,.12)}50%{transform:translateY(-3px);box-shadow:0 8px 20px rgba(0,0,0,.18)}}
 
 /* ---------- Base ---------- */
 *{box-sizing:border-box}
-
 html,body{
   margin:0;font-family:Roboto,system-ui,-apple-system,"Segoe UI",sans-serif;
   background:linear-gradient(135deg,var(--bg-1),var(--bg-2),var(--bg-3));
@@ -44,35 +43,24 @@ h3{margin:44px 0 14px;font-size:1.05rem;font-weight:500;color:var(--violet);anim
 /* ---------- Table layout ---------- */
 table{width:100%;border-collapse:collapse;margin-bottom:24px}
 td{padding:8px 12px 8px 0;vertical-align:middle}
-td.name{width:35%;font-weight:500;line-height:1.3;position:relative}
+td.name{width:35%;font-weight:500;line-height:1.3}
 
-/* Score display next to facilitator name */
-.score-display{
-  display:inline-block;margin-left:8px;padding:2px 6px;
-  background:var(--violet);color:#fff;border-radius:4px;
-  font-size:.75rem;font-weight:600;min-width:20px;text-align:center;
-}
+/* live badge */
+.score-display{display:inline-block;margin-left:8px;padding:2px 6px;background:var(--violet);
+  color:#fff;border-radius:4px;font-size:.75rem;font-weight:600;min-width:20px;text-align:center}
 
 /* ---------- Slider ---------- */
-input.range{-webkit-appearance:none;width:100%;height:8px;border-radius:4px;
-  background:#d7d7d7;cursor:pointer;outline:none;transition:background .15s}
-input.range::-webkit-slider-thumb{-webkit-appearance:none;width:18px;height:18px;
-  border-radius:50%;background:var(--violet);box-shadow:0 0 0 3px var(--violet-light);
-  transition:transform .2s;margin-top:0}
+input.range{-webkit-appearance:none;width:100%;height:8px;border-radius:4px;background:#d7d7d7;cursor:pointer;outline:none;transition:background .15s}
+input.range::-webkit-slider-thumb{-webkit-appearance:none;width:18px;height:18px;border-radius:50%;background:var(--violet);box-shadow:0 0 0 3px var(--violet-light);transition:transform .2s}
 input.range:active::-webkit-slider-thumb{transform:scale(1.25)}
-input.range::-moz-range-thumb{width:18px;height:18px;border:none;border-radius:50%;
-  background:var(--violet);margin-top:0}
+input.range::-moz-range-thumb{width:18px;height:18px;border:none;border-radius:50%;background:var(--violet)}
 
 .wrap{margin-top:2px;position:relative;animation:up .6s ease-out both}
-.scale{display:flex;justify-content:space-between;margin-top:8px;padding:0 1px 0 2px;
-  font-size:.78rem;font-weight:600;color:#444;user-select:none;line-height:1}
+.scale{display:flex;justify-content:space-between;margin-top:8px;padding:0 1px 0 2px;font-size:.78rem;font-weight:600;color:#444;user-select:none;line-height:1}
 
 /* ---------- Button ---------- */
-button{
-  display:block;margin:56px auto 12px;background:var(--violet);color:#fff;
-  border:none;padding:15px 44px;font-size:1rem;border-radius:var(--radius);
-  cursor:pointer;transition:background .2s
-}
+button{display:block;margin:56px auto 12px;background:var(--violet);color:#fff;border:none;
+  padding:15px 44px;font-size:1rem;border-radius:var(--radius);cursor:pointer;transition:background .2s}
 button:hover{background:#5d3ef8;animation:pulse .6s ease-out}
 
 .warn{text-align:center;font-size:.85rem;color:#b40000}
@@ -80,44 +68,27 @@ button:hover{background:#5d3ef8;animation:pulse .6s ease-out}
 /* ---------- Mobile tweaks ---------- */
 @media(max-width:680px){
   section{margin:16px;padding:20px 16px 32px;border-radius:12px}
-  
   h1.event{font-size:1.5rem;margin-bottom:8px;text-align:center}
   h2{font-size:1.25rem;margin-bottom:16px;text-align:center}
   h3{margin:32px 0 16px;font-size:1rem}
-  
-  /* Mobile table layout - stack facilitators vertically */
   table{margin-bottom:16px}
   td{padding:6px 0;display:block;width:100%}
-  td.name{width:100%;margin-bottom:8px;padding-bottom:4px;
-    border-bottom:1px solid #eee;font-size:.95rem}
-  
-  /* Mobile sliders */
+  td.name{width:100%;margin-bottom:8px;padding-bottom:4px;border-bottom:1px solid #eee;font-size:.95rem}
   input.range{height:10px;margin-bottom:10px}
   input.range::-webkit-slider-thumb,input.range::-moz-range-thumb{width:20px;height:20px}
-  
-  /* Better scale alignment on mobile */
   .scale{margin-top:10px;padding:0 2px}
   .scale span:not(:first-child):not(:nth-child(5)):not(:last-child){display:none}
-  
   button{padding:12px 24px;font-size:.9rem;margin:40px auto 8px}
-  
-  /* Meta info styling for mobile */
-  #meta{font-size:.9rem;line-height:1.4;margin-bottom:20px;
-    background:#f8f9ff;padding:12px;border-radius:8px}
+  #meta{font-size:.9rem;line-height:1.4;margin-bottom:20px;background:#f8f9ff;padding:12px;border-radius:8px}
 }
 
-/* ---------- Very small screens ---------- */
+/* ---------- Very small phones ---------- */
 @media(max-width:400px){
   section{margin:8px;padding:16px 12px 24px}
-  
   h1.event{font-size:1.3rem}
   h2{font-size:1.1rem}
   h3{font-size:.95rem;margin:24px 0 12px}
-  
-  td.name{font-size:.9rem}
-  
   button{padding:10px 20px;font-size:.85rem;margin:32px auto 8px}
-  
   #meta{font-size:.85rem;padding:10px}
 }
 </style>
@@ -128,87 +99,92 @@ button:hover{background:#5d3ef8;animation:pulse .6s ease-out}
   <h2 id="heading"></h2>
   <div id="meta"></div>
   <form id="form"></form>
-  <p class="warn">* Scores can't be edited once submitted</p>
+  <p class="warn">* Scores can’t be edited once submitted</p>
 </section>
 
 <script>
+/* ---------- guard-rails ---------- */
+const lookedUp = JSON.parse(sessionStorage.getItem('lookup') || '{}');
+if (!Array.isArray(lookedUp.facilitators) || sessionStorage.getItem('submitted')==='1'){
+  location.replace('/');                           // no data OR already sent
+}
+
 /* colour-fill track */
 function tint(el){
   const pct=((el.value-el.min)/(el.max-el.min))*100;
   el.style.background=`linear-gradient(90deg,var(--violet) ${pct}%,#d7d7d7 ${pct}%)`;
 }
-
-/* update score indicator */
+/* update score badge */
 function updateScore(el){
-  const scoreDisplay = el.closest('tr').querySelector('.score-display');
-  if(scoreDisplay) scoreDisplay.textContent = el.value;
+  const badge = el.closest('tr').querySelector('.score-display');
+  if (badge) badge.textContent = el.value;
 }
 
 (function(){
-  const data=JSON.parse(sessionStorage.getItem('lookup')||'{}');
-  if(!Array.isArray(data.facilitators)||!data.facilitators.length){
-    document.getElementById('heading').textContent='Missing facilitator data';return;
-  }
+  const data = lookedUp;           // same pointer, just nicer name
 
-  document.getElementById('heading').textContent=
+  document.getElementById('heading').textContent =
     `${data.team} — Facilitator Ratings`;
-  document.getElementById('meta').innerHTML=
+  document.getElementById('meta').innerHTML =
     `<b>Name:</b> ${data.name}<br><b>Email:</b> ${data.email}<br><b>Mobile:</b> ${data.mobile || '-'}`;
 
-  const crit=[
-    'Visibility & Presence','Energy & Motivation','Creative Engagement',
-    'Responsiveness','Encouragement & Acknowledgement',
-    'Emotional Support & Vibe Holding','Team Bonding',
+  const crit = [
+    'Visibility & Presence','Energy & Motivation','Creative Engagement','Responsiveness',
+    'Encouragement & Acknowledgement','Emotional Support & Vibe Holding','Team Bonding',
     'Consistency in Posting Prompts','Leadership Quality','Overall Experience'
   ];
 
-  const form=document.getElementById('form');
-  const scale='<div class="scale">'+Array.from({length:10},(_,i)=>`<span>${i+1}</span>`).join('')+'</div>';
-  const row=fac=>`
+  const form = document.getElementById('form');
+  const scale = '<div class="scale">' + Array.from({length:10},(_,i)=>`<span>${i+1}</span>`).join('') + '</div>';
+  const row = fac => `
     <tr>
       <td class="name">${fac}<span class="score-display">5</span></td>
       <td>
         <div class="wrap">
           <input class="range" type="range" min="1" max="10" value="5"
-                 aria-label="Rating for ${fac}" oninput="tint(this); updateScore(this)">
+                 aria-label="Rating for ${fac}"
+                 oninput="tint(this); updateScore(this)">
           ${scale}
         </div>
       </td>
     </tr>`;
 
-  form.innerHTML=
+  form.innerHTML =
     crit.map((c,i)=>`
       <h3 style="animation-delay:${i*0.05}s">Q${i+1}. ${c}</h3>
       <table>${data.facilitators.map(row).join('')}</table>
-    `).join('')+
+    `).join('') +
     '<button type="submit">Submit Feedback</button>';
 
   /* initial colour-fill */
   document.querySelectorAll('input.range').forEach(tint);
 
-  form.addEventListener('submit',async ev=>{
+  form.addEventListener('submit', async ev => {
     ev.preventDefault();
     const sliders=[...document.querySelectorAll('input.range')];
     const scores=[];
     data.facilitators.forEach((fac,i)=>{
       const vals=[];
-      for(let c=0;c<crit.length;c++){
+      for (let c=0;c<crit.length;c++){
         vals.push(+sliders[c*data.facilitators.length+i].value);
       }
       scores.push({fac,vals});
     });
+
     try{
-      const r=await fetch('/api/feedback',{
+      const r = await fetch('/api/feedback',{
         method:'POST',
         headers:{'Content-Type':'application/json'},
         body:JSON.stringify({...data,scores})
       });
-      if(!r.ok)throw new Error(r.status);
-      alert('✅  Feedback submitted!');
-      location.href='/thankyou.html';
+      if(!r.ok) throw new Error(r.status);
+      /* success */
+      sessionStorage.setItem('submitted','1');
+      sessionStorage.removeItem('lookup');
+      location.replace('/thankyou.html');          // replace, so back skips this page
     }catch(err){
-      alert('Submission failed, please try again.');
       console.error(err);
+      alert('Submission failed, please try again.');
     }
   });
 })();
